@@ -1,6 +1,0 @@
-module Nokogiri
-  module CSS
-    class SelectorHandler < XML::XPathHandler
-    end
-  end
-end
