@@ -1,6 +1,0 @@
-module Nokogiri
-  module XML
-    class XPathHandler
-    end
-  end
-end
