@@ -4,6 +4,8 @@
 
   * Not including an HTML entity for \r for HTML nodes.
   * Adding Node#elem?
+  * Removed CSS::SelectorHandler and XML::XPathHandler
+  * NodeSet implements to_xml
 
 === 1.1.0
 
